--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,11 +12,11 @@ server {
 
 	# Handle requests for the root URL and try to serve files directly
 	location / {
-			try_files $uri $uri/ =404;
+			try_files $uri $uri/ /index.html;
 	}
 
-	# Proxy settings for /api and /accounts/register endpoints
-	location ~ ^/(api|accounts/register) {
+	# Proxy settings for /api, /accounts/register and page endpoints
+	location ~ ^/(api|accounts/register|page) {
 			proxy_pass http://backend_dummy:8000;
 			proxy_http_version 1.1;
 			proxy_set_header Host $host;
