remove /page, fix 404 path, fixing redirection

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -16,14 +16,24 @@ server {
 	}
 
 	# Proxy settings for /api, /accounts/register and page endpoints
-	location ~ ^/(api|accounts/register|page) {
-			proxy_pass http://backend_dummy:8000;
-			proxy_http_version 1.1;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-Proto $scheme;
-	}
+	location ~ ^/(api|page) {
+    rewrite ^/page(.*)$ $1 break;  # Remove /page prefix from URI
+    proxy_pass http://backend_dummy:8000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+}
+
+location /accounts/register {
+    proxy_pass http://backend_dummy:8000/accounts/register;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+}
 
 	# for websocket
 	# proxy_set_header Upgrade $http_upgrade;
