--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -26,7 +26,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
 }
 
-location /accounts/register {
+location /register {
     proxy_pass http://backend_dummy:8000/accounts/register;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
