--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -35,6 +35,15 @@ location /register {
     proxy_set_header X-Forwarded-Proto $scheme;
 }
 
+location /login {
+    proxy_pass http://backend_dummy:8000/accounts/login;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+}
+
 	# for websocket
 	# proxy_set_header Upgrade $http_upgrade;
   # proxy_set_header Connection 'upgrade';
