--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,39 +12,50 @@ server {
 
 	# Handle requests for the root URL and try to serve files directly
 	location / {
-			try_files $uri $uri/ /index.html;
+		try_files $uri $uri/ /index.html;
 	}
 
-	# Proxy settings for /api, /accounts/register and page endpoints
+	# Proxy settings for /api and /page endpoints
 	location ~ ^/(api|page) {
-    rewrite ^/page(.*)$ $1 break;  # Remove /page prefix from URI
-    proxy_pass http://backend_dummy:8000;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
+        rewrite ^/page(.*)$ $1 break;  # Remove /page prefix from URI
+        proxy_pass http://backend_dummy:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-location /register {
-    proxy_pass http://backend_dummy:8000/accounts/register;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
+    # Proxy settings for POST requests to /register endpoints
+    location /register {
+        proxy_pass http://backend_dummy:8000/accounts/register;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-location /login {
-    proxy_pass http://backend_dummy:8000/accounts/login;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
+    # Proxy settings for POST requests to /login endpoints
+    location /login {
+        proxy_pass http://backend_dummy:8000/accounts/login;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /accounts/logout {
+        proxy_pass http://backend_dummy:8000/accounts/logout;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
 	# for websocket
 	# proxy_set_header Upgrade $http_upgrade;
-  # proxy_set_header Connection 'upgrade';
+    # proxy_set_header Connection 'upgrade';
 }
