--- a/all new/srcs/backend/Dockerfile
+++ b/all new/srcs/backend/Dockerfile
@@ -4,6 +4,12 @@ FROM python:3.10-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install PostgreSQL development packages
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy the current directory contents into the container at /app
 COPY . /app
 
@@ -15,4 +21,3 @@ EXPOSE 8000
 
 # Run the shell script to initialize the Django app
 CMD ["sh", "init_beePong.sh"]
-
