--- a/all new/srcs/nginx/nginx.conf
+++ b/all new/srcs/nginx/nginx.conf
@@ -1,6 +1,10 @@
 events { }
 
 http {
+    upstream django {
+        server web:8000;
+    }
+
     server {
         listen 80;
 
@@ -10,7 +14,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://web:8000;
+            proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
