--- a/srcs/backend/requirements.txt
+++ b/srcs/backend/requirements.txt
@@ -3,5 +3,5 @@ django-bootstrap5==23.3
 httpx==0.26.0
 pytest==7.4.4
 uvicorn==0.25.0
-psycopg2==2.9.6
-
+python-dotenv==0.21.0
+psycopg2-binary==2.9.6
