--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,20 +1,31 @@
-events { }
+server {
+	listen [::]:443 ssl;
+	listen 443 ssl;
 
-http {
-    server {
-        listen 80;
+	ssl_certificate /etc/nginx/ssl/beepong.csr;
+	ssl_certificate_key /etc/nginx/ssl/beepong.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri /index.html;
-        }
+	# Root directory and index file for the server
+	root /var/www/html;
+	index index.html;
 
-        location /api/ {
-            proxy_pass http://web:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+	# Handle requests for the root URL and try to serve files directly
+	location / {
+			try_files $uri $uri/ =404;
+	}
+
+	# Proxy settings for /api and /accounts/register endpoints
+	location ~ ^/(api|accounts/register) {
+			proxy_pass http://backend_dummy:8000;
+			proxy_http_version 1.1;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+	}
+
+	# for websocket
+	# proxy_set_header Upgrade $http_upgrade;
+  # proxy_set_header Connection 'upgrade';
 }
