--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -15,39 +15,11 @@ server {
 		try_files $uri $uri/ /index.html;
 	}
 
-	# Proxy settings for /api and /page endpoints
-	location ~ ^/(api|page) {
-        rewrite ^/page(.*)$ $1 break;  # Remove /page prefix from URI
+	# Proxy settings for /api, /page and /form endpoints
+	location ~ ^/(api|page|form) {
+        rewrite ^/page(.*)$ $1 break;
+        rewrite ^/form(.*)$ $1 break;
         proxy_pass http://backend_dummy:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Proxy settings for POST requests to /register endpoints
-    location /register {
-        proxy_pass http://backend_dummy:8000/accounts/register;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Proxy settings for POST requests to /login endpoints
-    location /login {
-        proxy_pass http://backend_dummy:8000/accounts/login;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /accounts/logout {
-        proxy_pass http://backend_dummy:8000/accounts/logout;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
