refactor login and register html

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -16,7 +16,7 @@ server {
 	}
 
 	# Proxy settings for /api, /page and /form endpoints
-	location ~ ^/(api|page|form) {
+	location ~ ^/(page|form) {
         rewrite ^/page(.*)$ $1 break;
         rewrite ^/form(.*)$ $1 break;
         proxy_pass http://backend_dummy:8000;
