--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,23 +1,46 @@
 input {
+  beats {
+    port => 5044
+  }
   file {
-    #https://www.elastic.co/guide/en/logstash/current/plugins-inputs-file.html
-    #default is TAIL which assumes more data will come into the file.
-    #change to mode => "read" if the file is a complete file.  by default, the file will be removed once reading is complete -- backup your files if you need them.
-    mode => "tail"
     path => "/usr/share/logstash/ingest_data/*"
+    start_position => "beginning"
   }
 }
 
 filter {
+  if [type] == "nginx-access" {
+    grok {
+      match => { "message" => "%{COMBINEDAPACHELOG}" }
+    }
+    mutate {
+      add_field => { "log_type" => "nginx_access" }
+    }
+  } else if [type] == "nginx-error" {
+    grok {
+      match => { "message" => "\[%{HTTPDATE:timestamp}\] \[%{WORD:loglevel}\] %{NUMBER:pid}#%{NUMBER}: \*(?:%{NUMBER}|%{GREEDYDATA:unique_id}) %{GREEDYDATA:error_message}" }
+    }
+    mutate {
+      add_field => { "log_type" => "nginx_error" }
+    }
+  } else if [type] == "syslog" {
+    grok {
+      match => { "message" => "%{SYSLOGLINE}" }
+    }
+    mutate {
+      add_field => { "log_type" => "syslog" }
+    }
+  }
 }
 
 output {
   elasticsearch {
+    hosts => ["https://es01:9200"]
     index => "logstash-%{+YYYY.MM.dd}"
-    hosts=> "${ELASTIC_HOSTS}"
-    user=> "${ELASTIC_USER}"
-    password=> "${ELASTIC_PASSWORD}"
-    cacert=> "certs/ca/ca.crt"
+    user => "${ELASTIC_USER}"
+    password => "${ELASTIC_PASSWORD}"
+    ssl => true
+    ssl_certificate_authorities => ["certs/ca/ca.crt"]
   }
 }
 
