--- a/srcs/backend/Dockerfile
+++ b/srcs/backend/Dockerfile
@@ -2,8 +2,12 @@ FROM python:3.11-slim-buster
 
 WORKDIR /beePong
 
+# Install necessary utilities
+RUN apt-get update && apt-get install -y curl procps
+
 # Copy the requirements.txt file and install the Python dependencies
 COPY requirements.txt /beePong/
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
