Renamed some services to be more consistent

--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -35,7 +35,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["https://es01:9200"]
+    hosts => ["https://elasticsearch:9200"]
     index => "logstash-%{+YYYY.MM.dd}"
     user => "${ELASTIC_USER}"
     password => "${ELASTIC_PASSWORD}"
