--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,32 @@
 volumes:
   certs:
     driver: local
-  esdata01:
+  es_data:
     driver: local
-  kibanadata:
+  kibana_data:
     driver: local
-  metricbeatdata01:
+  metricbeat_data:
     driver: local
-  filebeatdata01:
+  filebeat_data:
     driver: local
-  logstashdata01:
+  logstash_data:
     driver: local
   postgres_data:
     driver: local
   nginx_logs:
     driver: local
-  app_logs:  # New volume for application logs
+  app_logs: 
     driver: local
 
 networks:
   default:
-    name: elastic
+    name: beepong
     external: false
 
 services:
   db:
     image: postgres:16
-    container_name: postgres_db
+    container_name: beepong-postgres_db
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -81,8 +81,8 @@ services:
         condition: service_healthy
 
   pgadmin:
+    container_name: beepong-pgadmin
     image: dpage/pgadmin4
-    container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -92,6 +92,7 @@ services:
       - db
 
   setup:
+    container_name: beepong-setup
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
@@ -114,9 +115,9 @@ services:
           echo "Creating certs";
           echo -ne \
           "instances:\n"\
-          "  - name: es01\n"\
+          "  - name: elasticsearch\n"\
           "    dns:\n"\
-          "      - es01\n"\
+          "      - elasticsearch\n"\
           "      - localhost\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
@@ -135,18 +136,19 @@ services:
         find . -type d -exec chmod 750 \{\} \;;
         find . -type f -exec chmod 640 \{\} \;;
         echo "Waiting for Elasticsearch availability";
-        until curl -s --cacert config/certs/ca/ca.crt https://es01:9200 | grep -q "missing authentication credentials"; do sleep 30; done;
+        until curl -s --cacert config/certs/ca/ca.crt https://elasticsearch:9200 | grep -q "missing authentication credentials"; do sleep 30; done;
         echo "Setting kibana_system password";
-        until curl -s -X POST --cacert config/certs/ca/ca.crt -u "elastic:${ELASTIC_PASSWORD}" -H "Content-Type: application/json" https://es01:9200/_security/user/kibana_system/_password -d "{\"password\":\"${KIBANA_PASSWORD}\"}" | grep -q "^{}"; do sleep 10; done;
+        until curl -s -X POST --cacert config/certs/ca/ca.crt -u "elastic:${ELASTIC_PASSWORD}" -H "Content-Type: application/json" https://elasticsearch:9200/_security/user/kibana_system/_password -d "{\"password\":\"${KIBANA_PASSWORD}\"}" | grep -q "^{}"; do sleep 10; done;
         echo "All done!";
       '
     healthcheck:
-      test: ["CMD-SHELL", "[ -f config/certs/es01/es01.crt ]"]
+      test: ["CMD-SHELL", "[ -f config/certs/elasticsearch/elasticsearch.crt ]"]
       interval: 1s
       timeout: 5s
       retries: 120
 
-  es01:
+  elasticsearch:
+    container_name: beepong-elasticsearch
     depends_on:
       setup:
         condition: service_healthy
@@ -155,23 +157,23 @@ services:
       co.elastic.logs/module: elasticsearch
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
-      - esdata01:/usr/share/elasticsearch/data
+      - es_data:/usr/share/elasticsearch/data
     ports:
       - ${ES_PORT}:9200
     environment:
-      - node.name=es01
+      - node.name=elasticsearch
       - cluster.name=${CLUSTER_NAME}
       - discovery.type=single-node
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=true
-      - xpack.security.http.ssl.key=certs/es01/es01.key
-      - xpack.security.http.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.http.ssl.key=certs/elasticsearch/elasticsearch.key
+      - xpack.security.http.ssl.certificate=certs/elasticsearch/elasticsearch.crt
       - xpack.security.http.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.key=certs/es01/es01.key
-      - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.transport.ssl.key=certs/elasticsearch/elasticsearch.key
+      - xpack.security.transport.ssl.certificate=certs/elasticsearch/elasticsearch.crt
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
@@ -191,20 +193,21 @@ services:
       retries: 120
 
   kibana:
+    container_name: beepong-kibana
     depends_on:
-      es01:
+      elasticsearch:
         condition: service_healthy
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     labels:
       co.elastic.logs/module: kibana
     volumes:
       - certs:/usr/share/kibana/config/certs
-      - kibanadata:/usr/share/kibana/data
+      - kibana_data:/usr/share/kibana/data
     ports:
       - ${KIBANA_PORT}:5601
     environment:
       - SERVERNAME=kibana
-      - ELASTICSEARCH_HOSTS=https://es01:9200
+      - ELASTICSEARCH_HOSTS=https://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=config/certs/ca/ca.crt
@@ -228,9 +231,10 @@ services:
       timeout: 10s
       retries: 120
 
-  metricbeat01:
+  metricbeat:
+    container_name: beepong-metricbeat
     depends_on:
-      es01:
+      elasticsearch:
         condition: service_healthy
       kibana:
         condition: service_healthy
@@ -238,7 +242,7 @@ services:
     user: root
     volumes:
       - certs:/usr/share/metricbeat/certs
-      - metricbeatdata01:/usr/share/metricbeat/data
+      - metricbeat_data:/usr/share/metricbeat/data
       - "./elk/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro"
@@ -247,26 +251,27 @@ services:
     environment:
       - ELASTIC_USER=elastic
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - ELASTIC_HOSTS=https://es01:9200
+      - ELASTIC_HOSTS=https://elasticsearch:9200
       - KIBANA_HOSTS=https://kibana:5601
-      - LOGSTASH_HOSTS=http://logstash01:9600
+      - LOGSTASH_HOSTS=http://logstash:9600
       - CA_CERT=certs/ca/ca.crt
-      - ES_CERT=certs/es01/es01.crt
-      - ES_KEY=certs/es01/es01.key
+      - ES_CERT=certs/elasticsearch/elasticsearch.crt
+      - ES_KEY=certs/elasticsearch/elasticsearch.key
       - KB_CERT=certs/kibana/kibana.crt
       - KB_KEY=certs/kibana/kibana.key
     command:
       -strict.perms=false        
 
-  filebeat01:
+  filebeat:
+    container_name: beepong-filebeat
     depends_on:
-      es01:
+      elasticsearch:
         condition: service_healthy
     image: docker.elastic.co/beats/filebeat:${STACK_VERSION}
     user: root
     volumes:
       - certs:/usr/share/filebeat/certs
-      - filebeatdata01:/usr/share/filebeat/data
+      - filebeat_data:/usr/share/filebeat/data
       - "./elk/filebeat_ingest_data/:/usr/share/filebeat/ingest_data/"
       - "./elk/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro"
       - "/var/lib/docker/containers:/var/lib/docker/containers:ro"
@@ -276,16 +281,17 @@ services:
     environment:
       - ELASTIC_USER=elastic
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - ELASTIC_HOSTS=https://es01:9200
+      - ELASTIC_HOSTS=https://elasticsearch:9200
       - KIBANA_HOSTS=https://kibana:5601
-      - LOGSTASH_HOSTS=http://logstash01:9600
+      - LOGSTASH_HOSTS=http://logstash:9600
       - CA_CERT=certs/ca/ca.crt
     command:
       -strict.perms=false
 
-  logstash01:
+  logstash:
+    container_name: beepong-logstash
     depends_on:
-      es01:
+      elasticsearch:
         condition: service_healthy
       kibana:
         condition: service_healthy
@@ -295,12 +301,12 @@ services:
     user: root
     volumes:
       - certs:/usr/share/logstash/certs
-      - logstashdata01:/usr/share/logstash/data
+      - logstash_data:/usr/share/logstash/data
       - "./elk/logstash_ingest_data/:/usr/share/logstash/ingest_data/"
       - "./elk/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro"
     environment:
       - xpack.monitoring.enabled=false
       - ELASTIC_USER=elastic
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - ELASTIC_HOSTS=https://es01:9200
+      - ELASTIC_HOSTS=https://elasticsearch:9200
 
