Rename backendDummy and nginx containers as beepong-containername

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       retries: 5
 
   backend_dummy:
-    container_name: backendDummy
+    container_name: beepong-backendDummy
     command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
     build:
       context: ./srcs/backend
@@ -67,7 +67,7 @@ services:
     restart: on-failure
 
   nginx:
-    container_name: nginx
+    container_name: beepong-nginx
     build:
       context: ./srcs/nginx
     volumes:
