change settings to run on school Linux PC

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       - ./srcs/frontend:/var/www/html
       - nginx_logs:/var/log/nginx  # Mount the nginx_logs volume
     ports:
-      - 443:443
+      - 1024:1024
     restart: on-failure
     depends_on:
       backend_dummy:
@@ -178,10 +178,10 @@ services:
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
     mem_limit: ${ES_MEM_LIMIT}
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+    # ulimits:
+    #   memlock:
+    #     soft: -1
+    #     hard: -1
     healthcheck:
       test:
         [
