Dashboard set up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -310,3 +310,24 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTIC_HOSTS=https://elasticsearch:9200
 
+  dashboard_import:
+    image: curlimages/curl:latest
+    container_name: beepong-dashboard-import
+    depends_on:
+      kibana:
+        condition: service_healthy
+    command: >
+      sh -c "
+        until curl -I -s --cacert /usr/share/kibana/config/certs/ca/ca.crt https://kibana:5601 | grep -q 'HTTP/1.1 302 Found'; do
+          sleep 10;
+        done;
+        curl -X POST 'https://kibana:5601/api/saved_objects/_import?overwrite=true' \
+          -H 'kbn-xsrf: true' \
+          --cacert /usr/share/kibana/config/certs/ca/ca.crt \
+          -u kibana_system:${KIBANA_PASSWORD} \
+          --form file=@/usr/share/kibana/BeePong_dashboard.ndjson
+      "
+    volumes:
+      - certs:/usr/share/kibana/config/certs
+      - ./elk/BeePong_dashboard.ndjson:/usr/share/kibana/BeePong_dashboard.ndjson:ro
+
