fixing error page for oauth

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -16,9 +16,10 @@ server {
 	}
 
 	# Proxy settings for /api, /page and /form endpoints
-	location ~ ^/(page|form) {
+	location ~ ^/(page|form|oauth) {
         rewrite ^/page(.*)$ $1 break;
         rewrite ^/form(.*)$ $1 break;
+				rewrite ^/oauth(.*)$ $1 break;
         proxy_pass http://backend_dummy:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
