--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -10,26 +10,38 @@ server {
 	root /var/www/html;
 	index index.html;
 
+	access_log  /var/log/nginx/access.log;
+	error_log   /var/log/nginx/error.log debug;
 	# Handle requests for the root URL and try to serve files directly
 	location / {
-		try_files $uri $uri/ /index.html;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		# try_files $uri $uri/ /index.html @$http_upgrade;
+		try_files $uri $uri/ /index.html;		
 	}
 
 	# Proxy settings for /api, /page and /form endpoints
 	location ~ ^/(page|form) {
         rewrite ^/page(.*)$ $1 break;
         rewrite ^/form(.*)$ $1 break;
-        proxy_pass http://backend_dummy:8000;
+        proxy_pass http://backendummy:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
 		proxy_http_version 1.1;
+		# websocket
 		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		proxy_set_header Connection "upgrade";
+    }
+
+	location /pong {
+        proxy_pass          http://backendummy:8000;
+        proxy_http_version  1.1;
+        proxy_set_header    Upgrade $http_upgrade;
+        proxy_set_header    Connection "upgrade";
+        proxy_set_header 	Host $host;
+        proxy_set_header 	X-Real-IP $remote_addr;
+        proxy_set_header 	X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header 	X-Forwarded-Proto $scheme;
     }
 
 	# for websocket
