--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -14,7 +14,6 @@ server {
 	error_log   /var/log/nginx/error.log debug;
 	# Handle requests for the root URL and try to serve files directly
 	location / {
-		# try_files $uri $uri/ /index.html @$http_upgrade;
 		try_files $uri $uri/ /index.html;		
 	}
 
@@ -33,7 +32,8 @@ server {
 		proxy_set_header Connection "upgrade";
     }
 
-	location /pong {
+	# Proxy settings for /ws endpoint
+	location ~ ^/ws {
         proxy_pass          http://backendummy:8000;
         proxy_http_version  1.1;
         proxy_set_header    Upgrade $http_upgrade;
@@ -43,8 +43,4 @@ server {
         proxy_set_header 	X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header 	X-Forwarded-Proto $scheme;
     }
-
-	# for websocket
-	# proxy_set_header Upgrade $http_upgrade;
-    # proxy_set_header Connection 'upgrade';
 }
