--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -27,8 +27,30 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+	
+    # Serve Django admin interface
+    location /admin/ {
+        proxy_pass http://backend_dummy:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Serve static files (adjust the path to your static files)
+    location /static/ {
+        alias /path/to/your/static/files/;
+    }
+
+    # Serve media files (adjust the path to your media files)
+    location /media/ {
+        alias /path/to/your/media/files/;
+    }
 
 	# for websocket
 	# proxy_set_header Upgrade $http_upgrade;
     # proxy_set_header Connection 'upgrade';
 }
+
+
+
