--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,6 +1,7 @@
 input {
-  beats {
-    port => 5044
+  gelf {
+    host => "0.0.0.0"
+    port => 12201
   }
   file {
     path => "/usr/share/logstash/ingest_data/*"
@@ -9,31 +10,21 @@ input {
 }
 
 filter {
-  if [type] == "nginx-access" {
-    grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
-    }
+  if [host_name] and [host_name][name] {
     mutate {
-      add_field => { "log_type" => "nginx_access" }
+      rename => { "[host_name][name]" => "host_name" }
     }
-  } else if [type] == "nginx-error" {
-    grok {
-      match => { "message" => "\[%{HTTPDATE:timestamp}\] \[%{WORD:loglevel}\] %{NUMBER:pid}#%{NUMBER}: \*(?:%{NUMBER}|%{GREEDYDATA:unique_id}) %{GREEDYDATA:error_message}" }
-    }
+  }
+  if [host] {
     mutate {
-      add_field => { "log_type" => "nginx_error" }
-    }
-  } else if [type] == "syslog" {
-    grok {
-      match => { "message" => "%{SYSLOGLINE}" }
-    }
-    mutate {
-      add_field => { "log_type" => "syslog" }
+      rename => { "host" => "host_name" }
     }
   }
 }
 
+
 output {
+  stdout { codec => rubydebug }
   elasticsearch {
     hosts => ["https://elasticsearch:9200"]
     index => "logstash-%{+YYYY.MM.dd}"
