--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -10,9 +10,15 @@ input {
 }
 
 filter {
+  if [container_name] == "beepong-postgres_db" {
+    mutate {
+      add_field => { "service" => "postgres" }
+    }
+  }
+  # Convert host_name to a string if it's an object with a name field
   if [host_name] and [host_name][name] {
     mutate {
-      rename => { "[host_name][name]" => "host_name" }
+      replace => { "host_name" => "%{[host_name][name]}" }
     }
   }
   if [host] {
@@ -22,16 +28,41 @@ filter {
   }
 }
 
-
 output {
   stdout { codec => rubydebug }
-  elasticsearch {
-    hosts => ["https://elasticsearch:9200"]
-    index => "logstash-%{+YYYY.MM.dd}"
-    user => "${ELASTIC_USER}"
-    password => "${ELASTIC_PASSWORD}"
-    ssl => true
-    ssl_certificate_authorities => ["certs/ca/ca.crt"]
+
+  # Send GELF logs to one index
+  if [container_name] == "beepong-backendDummy" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      index => "backend-logs-%{+YYYY.MM.dd}"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
+  }
+  # postgres to its own index
+  if [service] == "postgres" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+        index => "postgres-logs-%{+YYYY.MM.dd}"
+        user => "${ELASTIC_USER}"
+        password => "${ELASTIC_PASSWORD}"
+        ssl => true
+        ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
+  }
+  # and send Nginx logs to another index
+  if [log][file][path] =~ "access.log" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      index => "nginx-logs-%{+YYYY.MM.dd}"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+    }
   }
 }
 
