Attempt to set ILM automatically

--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -10,15 +10,14 @@ input {
 }
 
 filter {
-  if [container_name] == "beepong-postgres_db" {
-    mutate {
-      add_field => { "service" => "postgres" }
-    }
-  }
   # Convert host_name to a string if it's an object with a name field
   if [host_name] and [host_name][name] {
     mutate {
       replace => { "host_name" => "%{[host_name][name]}" }
+    }
+  } else if [host_name] {
+    mutate {
+      convert => { "host_name" => "string" }
     }
   }
   if [host] {
@@ -31,37 +30,39 @@ filter {
 output {
   stdout { codec => rubydebug }
 
-  # Send GELF logs to one index
   if [container_name] == "beepong-backendDummy" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-      index => "backend-logs-%{+YYYY.MM.dd}"
+      index => "logs-backend-%{+YYYY.MM.dd}"  # Initial index name, ILM will handle rollover
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
       ssl => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
+      ilm_rollover_alias => "logs-alias"  # Rollover alias
     }
   }
-  # postgres to its own index
+  
   if [service] == "postgres" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-        index => "postgres-logs-%{+YYYY.MM.dd}"
-        user => "${ELASTIC_USER}"
-        password => "${ELASTIC_PASSWORD}"
-        ssl => true
-        ssl_certificate_authorities => ["certs/ca/ca.crt"]
-    }
-  }
-  # and send Nginx logs to another index
-  if [log][file][path] =~ "access.log" {
-    elasticsearch {
-      hosts => ["https://elasticsearch:9200"]
-      index => "nginx-logs-%{+YYYY.MM.dd}"
+      index => "logs-postgres-%{+YYYY.MM.dd}"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
       ssl => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
+      ilm_rollover_alias => "logs-alias"
+    }
+  }
+
+  if [log][file][path] =~ "access.log" {
+    elasticsearch {
+      hosts => ["https://elasticsearch:9200"]
+      index => "logs-nginx-%{+YYYY.MM.dd}"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
+      ilm_rollover_alias => "logs-alias"
     }
   }
 }
