--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,53 +167,36 @@ services:
         
         # Wait for additional time to ensure all plugins and services in Kibana are ready
         sleep 30
-        
-        response=$(curl -s -X POST --cacert config/certs/ca/ca.crt "https://kibana:5601/api/data_views/data_view" \
-          -H "kbn-xsrf: true" \
-          -H "Content-Type: application/json" \
-          -u "elastic:${ELASTIC_PASSWORD}" \
-          -d "{\"data_view\": {\"title\": \"backend-logs-*\", \"timeFieldName\": \"@timestamp\"}}")
-        if [ -z "$response" ]; then
-          echo "Failed to create backend-logs-* data view or no response from Kibana"
-        else
-          echo "Response from creating backend-logs-* data view: $response"
-        fi
-        
-        response=$(curl -s -X POST --cacert config/certs/ca/ca.crt "https://kibana:5601/api/data_views/data_view" \
-          -H "kbn-xsrf: true" \
-          -H "Content-Type: application/json" \
-          -u "elastic:${ELASTIC_PASSWORD}" \
-          -d "{\"data_view\": {\"title\": \"nginx-logs-*\", \"timeFieldName\": \"@timestamp\"}}")
-        if [ -z "$response" ]; then
-          echo "Failed to create nginx-logs-* data view or no response from Kibana"
-        else
-          echo "Response from creating nginx-logs-* data view: $response"
-        fi
-        
-        response=$(curl -s -X POST --cacert config/certs/ca/ca.crt "https://kibana:5601/api/data_views/data_view" \
-          -H "kbn-xsrf: true" \
-          -H "Content-Type: application/json" \
-          -u "elastic:${ELASTIC_PASSWORD}" \
-          -d "{\"data_view\": {\"title\": \"postgres-logs-*\", \"timeFieldName\": \"@timestamp\"}}")
-        if [ -z "$response" ]; then
-          echo "Failed to create postgres-logs-* data view or no response from Kibana"
-        else
-          echo "Response from creating postgres-logs-* data view: $response"
-        fi
-        
-        response=$(curl -s -X POST --cacert config/certs/ca/ca.crt "https://kibana:5601/api/data_views/data_view" \
-          -H "kbn-xsrf: true" \
-          -H "Content-Type: application/json" \
-          -u "elastic:${ELASTIC_PASSWORD}" \
-          -d "{\"data_view\": {\"title\": \"metricbeat-*\", \"timeFieldName\": \"@timestamp\"}}")
-        if [ -z "$response" ]; then
-          echo "Failed to create metricbeat-* data view or no response from Kibana"
-        else
-          echo "Response from creating metricbeat-* data view: $response"
-        fi
-        
-        echo "All done!";
 
+
+        echo "Creating ILM policy";
+        curl -s -X PUT --cacert config/certs/ca/ca.crt "https://elasticsearch:9200/_ilm/policy/beepong_log_policy" \
+          -H "Content-Type: application/json" \
+          -u "elastic:${ELASTIC_PASSWORD}" \
+          -d "{\"policy\":{\"phases\":{\"hot\":{\"min_age\":\"0ms\",\"actions\":{\"rollover\":{\"max_size\":\"50gb\",\"max_age\":\"1d\"},\"set_priority\":{\"priority\":100}}},\"delete\":{\"min_age\":\"30d\",\"actions\":{\"delete\":{}}}}}}"
+
+        echo "Creating Index Template with Alias and ILM Policy";
+        json_payload=\'{
+          "index_patterns": ["logs-*"],
+          "template": {
+            "settings": {
+              "index.lifecycle.name": "beepong_log_policy",
+              "index.lifecycle.rollover_alias": "logs-alias"
+            },
+            "aliases": {
+              "logs-alias": {}
+            }
+          }
+        }\';
+        
+        echo "JSON Payload: $json_payload";
+        
+        curl -s -X PUT --cacert config/certs/ca/ca.crt "https://elasticsearch:9200/_index_template/beepong_logs_template" \
+          -H "Content-Type: application/json" \
+          -u "elastic:${ELASTIC_PASSWORD}" \
+          -d "$json_payload";
+        
+        echo "ELK setup completed!";
       '
     healthcheck:
       test: ["CMD-SHELL", "[ -f config/certs/elasticsearch/elasticsearch.crt ]"]
