Attempt to create Policies and Templates for Index lifecycles

--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -31,33 +31,42 @@ filter {
 output {
   stdout { codec => rubydebug }
 
-  # Send GELF logs to one index
+  # Backend logs with ILM
   if [container_name] == "beepong-backendDummy" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-      index => "backend-logs-%{+YYYY.MM.dd}"
+      ilm_enabled => true
+      ilm_rollover_alias => "backend-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Backend-logs-index-policy"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
       ssl => true
       ssl_certificate_authorities => ["certs/ca/ca.crt"]
     }
   }
-  # postgres to its own index
+  # Postgres logs with ILM
   if [service] == "postgres" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-        index => "postgres-logs-%{+YYYY.MM.dd}"
-        user => "${ELASTIC_USER}"
-        password => "${ELASTIC_PASSWORD}"
-        ssl => true
-        ssl_certificate_authorities => ["certs/ca/ca.crt"]
+      ilm_enabled => true
+      ilm_rollover_alias => "postgres-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Postgres-logs-index-policy"
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PASSWORD}"
+      ssl => true
+      ssl_certificate_authorities => ["certs/ca/ca.crt"]
     }
   }
-  # and send Nginx logs to another index
+  # Nginx logs with ILM
   if [log][file][path] =~ "access.log" {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-      index => "nginx-logs-%{+YYYY.MM.dd}"
+      ilm_enabled => true
+      ilm_rollover_alias => "nginx-logs"
+      ilm_pattern => "{now/d}-000001"
+      ilm_policy => "Nginx-logs-index-policy"
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PASSWORD}"
       ssl => true
@@ -65,4 +74,3 @@ output {
     }
   }
 }
-
